# algo-rust-bert-demo

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile-bk  Dockerfile.amd  Dockerfile.arm  README.md  environment.yml
src/: main.rs
