[package]
name = "algo-rust-bert-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rust-bert = "0.22.0"
tch = "^0.14.0"

[[bin]]
name = "torch-demo"
path = "./test-tool/torch_demo.rs"